# red-crab

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/red_crab/: trait.ValueFactorService.js
implementors/serde/de/: trait.Deserialize.js
red_crab/: all.html  index.html  sidebar-items.js  trait.ValueFactorService.html
red_crab/akshare/: index.html  sidebar-items.js  struct.Akshare.html
red_crab/errors/: enum.RedCrabError.html  index.html  sidebar-items.js  struct.MissingImplementationContent.html  type.Result.html
red_crab/indicator/: index.html  sidebar-items.js  struct.Descriptors.html  trait.ValueFactor.html
red_crab/prelude/: index.html  sidebar-items.js
src/: errors.rs  indicator.rs  lib.rs  transport.rs
src/akshare/: balance_sheet.rs  cash_flow_statement.rs  income_statement.rs  mod.rs  shared.rs  transport.rs
src/indicator/: fundamental_analysis.rs  mod.rs
src/prelude/: errors.rs  mod.rs  shared.rs
src/red_crab/: errors.rs.html  lib.rs.html
src/storage/: akshare_storage.rs  balance_sheet.rs  cash_flow_statement.rs  income_statement.rs  mod.rs
(+55 files in other folders)
